syntax = "proto3";
package smplidentitychain.did;

import "smplidentitychain/did/did_document.proto";
import "smplidentitychain/did/did_document_metadata.proto";
option go_package = "github.com/SmplEcosystem/SmplIdentityChain/x/did/types";
option java_multiple_files = true;

message DidInfo {
  DIDDocument didDocument = 1;
  DidDocumentMetadata didDocumentMetadata = 2;
  uint64 sequence = 3;
}